--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">DOT SDK Samples</string>
     <string name="navigation_destination_document_auto_capture">Document Auto Capture</string>
     <string name="navigation_destination_face_auto_capture">Face Auto Capture</string>
+    <string name="navigation_destination_face_matcher">Face Matcher</string>
     <string name="navigation_destination_home">Home</string>
     <string name="navigation_destination_nfc_reading">NFC Reading</string>
     <string name="navigation_destination_smile_liveness">Smile Liveness</string>
@@ -9,6 +10,8 @@
     <string name="sample_document_auto_capture_description">Basic component sample.</string>
     <string name="sample_face_auto_capture_title">Face Auto Capture</string>
     <string name="sample_face_auto_capture_description">Component with Passive Liveness evaluation.</string>
+    <string name="sample_face_matcher_title">Face Matcher</string>
+    <string name="sample_face_matcher_description">Perform face matching using image resources.</string>
     <string name="sample_nfc_reading_title">NFC Reading</string>
     <string name="sample_nfc_reading_description">Combination of Document Auto Capture component with enabled MRZ recognition and NFC Travel Document Reader component.</string>
     <string name="sample_nfc_reading_start_instruction">Place your Travel Document against your phone and wait for the progress.</string>
