--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="navigation_destination_face_auto_capture">Face Auto Capture</string>
     <string name="navigation_destination_face_matcher">Face Matcher</string>
     <string name="navigation_destination_home">Home</string>
+    <string name="navigation_destination_magnifeye_liveness">MagnifEye Liveness</string>
     <string name="navigation_destination_nfc_reading">NFC Reading</string>
     <string name="navigation_destination_smile_liveness">Smile Liveness</string>
     <string name="sample_document_auto_capture_title">Document Auto Capture</string>
@@ -12,6 +13,9 @@
     <string name="sample_face_auto_capture_description">Component with Passive Liveness evaluation.</string>
     <string name="sample_face_matcher_title">Face Matcher</string>
     <string name="sample_face_matcher_description">Perform face matching using image resources.</string>
+    <string name="sample_magnifeye_liveness_title">MagnifEye Liveness</string>
+    <string name="sample_magnifeye_liveness_description">Basic component sample.</string>
+    <string name="sample_magnifeye_liveness_summary">Use the Digital Identity Service in order to evaluate the MagnifEye liveness score. See: https://developers.innovatrics.com/digital-onboarding/technical/remote/dot-dis/latest/documentation/#_magnifeye_liveness_check</string>
     <string name="sample_nfc_reading_title">NFC Reading</string>
     <string name="sample_nfc_reading_description">Combination of Document Auto Capture component with enabled MRZ recognition and NFC Travel Document Reader component.</string>
     <string name="sample_nfc_reading_start_instruction">Place your Travel Document against your phone and wait for the progress.</string>
