--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="sample_magnifeye_liveness_summary">Use the Digital Identity Service in order to evaluate the MagnifEye liveness score. See: https://developers.innovatrics.com/digital-onboarding/technical/remote/dot-dis/latest/documentation/#_magnifeye_liveness_check</string>
     <string name="sample_nfc_reading_title">NFC Reading</string>
     <string name="sample_nfc_reading_description">Combination of Document Auto Capture component with enabled MRZ recognition and NFC Travel Document Reader component.</string>
-    <string name="sample_nfc_reading_start_instruction">Place your Travel Document against your phone and wait for the progress.</string>
+    <string name="sample_nfc_reading_cancel">Cancel</string>
     <string name="sample_smile_liveness_title">Smile Liveness</string>
     <string name="sample_smile_liveness_description">Basic component sample.</string>
     <string name="sample_smile_liveness_summary">Use the Digital Identity Service in order to evaluate the smile liveness score. See: https://developers.innovatrics.com/digital-onboarding/technical/remote/dot-dis/latest/documentation/#_smile_liveness_check</string>
